--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,30 @@
     <string name="menu_Team_Members">أعضاء الفريق</string>
     <string name="menu_share">نشر التّطبيق</string>
     <string name="menu_rate">تقييم التّطبيق</string>
+
+    <string name="profit_strategies">
+        حريفنا الكريم نحن نضع على ذمتك مجموعة من النصائح والإستراتيجيات الناجحة
+        التى تساعدك على تحقيق الربح من تطبيقاتك فلا تتردد في التواصل معنا
+        عن طريق الضغط على الزر الموجود بالأسفل
+    </string>
+
+    <string name="videos">
+        حريفنا الكريم نحن نستطيع عمل فيديوهات ترويجية لك فلا تتردد في التواصل معنا
+        عن طريق الضغط على الزر الموجود بالأسفل
+    </string>
+
+    <string name="other_services">
+    حريفنا الكريم نحن نستطيع تقديم خدمات اخرى كثيرة لك فلا تتردد في التواصل معنا
+    عن طريق الضغط على الزر الموجود بالأسفل
+    </string>
+
+    <string name="developing_apps">
+    حريفنا الكريم نحن نستطيع تقديم خدمات برمجة وتطوير التطبيقات لك فلا تتردد في التواصل معنا
+    عن طريق الضغط على الزر الموجود بالأسفل
+    </string>
+
+    <string name="design_pics">
+    حريفنا الكريم نحن نستطيع تقديم خدمات تصميم الصور والشعارات لك فلا تتردد في التواصل معنا
+    عن طريق الضغط على الزر الموجود بالأسفل
+    </string>
 </resources>
