--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,11 +7,12 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">خدماتنا</string>
+    <string name="menu_home">عروضنا التجارية</string>
     <string name="menu_about">التعريف بالفريق</string>
     <string name="menu_Team_Members">أعضاء الفريق</string>
     <string name="menu_share">نشر التّطبيق</string>
     <string name="menu_rate">تقييم التّطبيق</string>
+
 
     <string name="profit_strategies">
         حريفنا الكريم نحن نضع على ذمتك مجموعة من النصائح والإستراتيجيات الناجحة
@@ -42,5 +43,97 @@
 
     <string name="if_you">إذا أعجبك التّطبيق فرجاءا قم بتقييمه</string>
     <string name="rate_s">تقييم التّطبيق</string>
+
+
+    <string name="youtubeAPIKey">AIzaSyBu40VyAAKoU2nSY9z580xFKh_fxu6XLqY</string>
+    <string name="youtubeVideo_id">m2X7tIvJD2c</string>
+    <string name="country">الدولة</string>
+    <string name="title">المهنة</string>
+    <string name="Division">الشعبة</string>
+
+
+    <string name="signout"> تسجيل الخروج </string>
+    <string name="rate"> تقييم </string>
+    <string name="share"> مشاركة </string>
+    <string name="about"> عن الفريق </string>
+    <string name="offers"> عروضنا التجارية </string>
+    <string name="login"> تسجيل الدخول </string>
+    <string name="newAccount"> حساب جديد </string>
+    <string name="profile"> الصفحة الشخصية </string>
+
+    <string name="design">تصميم </string>
+    <string name="programming">برمجة التطبيقات </string>
+    <string name="videos2">فيديوهات</string>
+    <string name="money">استراجيات الربح</string>
+    <string name="others">خدمات أخرى</string>
+    <string name="askForServices">اطلب خدماتنا </string>
+
+
+    <string name="ListOfDeveloper"> أعضاء الفريق </string>
+
+    <string-array name="dev1">
+        <item> سليم سليمان</item>
+        <item>تونس</item>
+        <item>مدرب مجال الاندرويد</item>
+        <item>اشهار ومالتي ميديا</item>
+        <item>slimane</item>
+    </string-array>
+
+    <string-array name="dev2">
+        <item>ريهام محمود</item>
+        <item>مصر</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>برمجة تطبيقات الاندرويد</item>
+        <item>reham</item>
+    </string-array>
+
+    <string-array name="dev3">
+        <item>عبيدة الحاتم</item>
+        <item>سوريا</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>برمجة تطبيقات الاندرويد</item>
+        <item>obida</item>
+    </string-array>
+
+    <string-array name="dev4">
+        <item>سماح مكي</item>
+        <item>مصر</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>برمجة تطبيقات الاندرويد</item>
+        <item>samah</item>
+    </string-array>
+
+    <string-array name="dev5">
+        <item>تهاني محمود</item>
+        <item>مصر</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>برمجة تطبيقات الاندرويد</item>
+        <item>tahany</item>
+    </string-array>
+
+
+    <string-array name="dev6">
+        <item>دعاء القرشى </item>
+        <item>المملكة العربية السعودية</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>برمجة تطبيقات الاندرويد</item>
+        <item>duaa</item>
+    </string-array>
+
+    <string-array name="dev7">
+        <item> عبد الوهاب عبد الهادى</item>
+        <item>سوريا</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>قواعد بيانات و برمجة تطبيقات الاندرويد</item>
+        <item>abdelwahab</item>
+    </string-array>
+
+    <string-array name="dev8">
+        <item> سعد </item>
+        <item>مصر</item>
+        <item>مطور تطبيقات اندرويد</item>
+        <item>برمجة تطبيقات الاندرويد</item>
+        <item>saad</item>
+    </string-array>
 
 </resources>
