--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,13 @@
         <item>برمجة تطبيقات الاندرويد</item>
         <item>saad</item>
     </string-array>
-    >>>>>>> e7cbcc74b6244b1b3cb8a266024129dece90fb5d
 
+    <string name="about_Ac">   هو فريق برمجي عربي هدفه برمجة تطبيقات ذات قيمة إبداعيّة و برمجيّة إعتمادا على كوادر عربيّة ذات مستوى علمي مميّز و خبرة كبيرة بالبرمجة .
+هدفنا خلق أفكار و تطوير مشاريع برمجيّة إبداعيّة خلاقة قادرة على منافسة التّطبيقات العالميّة .
+ما يميّزنا :\n
+- الحرفيّة و الإبداع\n
+- سنوات من الخبرة\n
+- إحترام الوقت\n
+- السعي الدائم لإرضاء حرفائنا الكرام
+</string>
 </resources>
